@@ -9,6 +9,7 @@ Build-Depends: bash-completion,
                python3-all,
                python3-breezy (>= 3.0.0),
                python3-breezy.tests,
+               python3-configparser,
                python3-dulwich (>= 0.19.7),
                python3-distro-info,
                python3-debian,
@@ -29,6 +30,7 @@ Package: lintian-brush
 Architecture: all
 Depends: devscripts,
          python3-breezy (>= 3.0.0),
+         python3-configparser,
          python3-debian,
          python3-dulwich (>= 0.19.7),
          python3-distro-info,
