@@ -1,3 +1,3 @@
 Tests: tool-testsuite
-Depends: lintian-brush, python3-breezy.tests, gpg, dos2unix, libdebhelper-perl, lintian
+Depends: lintian-brush, python3-breezy.tests, gpg, dos2unix, libdebhelper-perl, lintian, python3-configparser
 Restrictions: allow-stderr
